@@ -1,5 +1,8 @@
 2000-07-17  Eric Melski  <ericm@scriptics.com>
 
+	* library/bgerror.tcl: Fixed a typo in one of the bgerror dialog
+	label.
+
 	* library/msgs/it.msg: Italian message catalog, from Paolo
 	Brutti. [RFE: 6012].
 
